@@ -55,6 +55,7 @@
 						<li>úprava suroviny, receptu, diety</li>
 						<li>feedback formulář</li>
 						<li>přidání kalorií k surovinám</li>
+						<li>výpis všech receptů k tisku</li>
 					</ul>
 				</li>
 				<i>
